<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.PanduanKompasActivity">

    <ImageButton
        android:id="@+id/back_panduan5"
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        android:contentDescription="back"
        tools:ignore="TouchTargetSizeCheck"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_panduan5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/judul_alat3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinssemibold"
                android:text="Panduan Penggunaan Kompas yang Benar"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageSleeping"
                android:layout_width="360dp"
                android:layout_height="220dp"
                android:src="@drawable/kompass"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/judul_alat3" />

            <TextView
                android:id="@+id/desc_kompas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_kompas"
                android:fontFamily="@font/poppinsregular"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageSleeping" />

            <TextView
                android:id="@+id/panduankompas1"
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppinssemibold"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:text="@string/panduan_kompas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_kompas"/>

            <TextView
                android:id="@+id/panduankompas2"
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppinssemibold"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:text="@string/panduan_kompas2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/panduankompas1"/>

            <TextView
                android:id="@+id/panduankompas3"
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppinssemibold"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:text="@string/panduan_kompas3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/panduankompas2"/>

            <TextView
                android:id="@+id/panduankompas4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/panduan_kompas4"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/panduankompas3" />

            <TextView
                android:id="@+id/panduankompas5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/panduan_kompas5"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/panduankompas4" />

            <TextView
                android:id="@+id/panduankompas6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/panduan_kompas5"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/panduankompas5" />

            <TextView
                android:id="@+id/kompasreferensi"
                android:layout_width="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:text="Referensi : https://kumparan.com/tips-dan-trik/cara-menggunakan-kompas-sebagai-penunjuk-arah-20dkkS2k0c8/full"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/panduankompas6"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kompasreferensi"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>